--- a/src/layout/Footer/style.scss
+++ b/src/layout/Footer/style.scss
@@ -7,6 +7,8 @@
     text-decoration: none;
 }
 
-.custom-contact:not(:last-child){
-    margin-right: 5px;
+.custom-contact{
+    &:not(:last-child){
+        margin-right: 10px;
+    }
 }
