Добавил Vite, перешел на axios

--- a/src/style/scss/mainStyle.scss
+++ b/src/style/scss/mainStyle.scss
@@ -19,7 +19,7 @@ $theme-colors: (
 }
 
 //IMPORT
-@import "~bootstrap/scss/bootstrap";
+@import "bootstrap/scss/bootstrap";
 @import "../../layout/Header/style.scss"; // HeaderStyle
 //
 
