Верстка под телефон карусели

--- a/src/components/EventsCarousel/styles.scss
+++ b/src/components/EventsCarousel/styles.scss
@@ -15,6 +15,10 @@
     justify-content: center;
     align-items: center;
 
+    @media (max-width: 768px){
+      width: 100%;
+    }
+
     .SliderContainer {
       .DateContainer {
         display: block;
